compiler/tests/ui/fail/foo_fn.rs
#[compiler::item("foo_fn")]
fn foo() {}

fn main() {}
